fix: corrige erro na scrollbar da lista de produtos.

--- a/DashboardUi/src/pages/dashboard-produtos/dashboard-produtos.css
+++ b/DashboardUi/src/pages/dashboard-produtos/dashboard-produtos.css
@@ -87,8 +87,8 @@ button {
 .divTable {
   padding: 10px;
   width: auto; 
-  height:inherit; 
-  overflow:auto;
+  height: 90%; 
+  overflow: auto;
 }
 
 .divTable::-webkit-scrollbar {
